4. eks-apps/istio/admin/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-admin
  namespace: default
spec:
  selector:
    role: admin
  servers:
    - hosts:
        - "*.admin.kaonmir.xyz"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
        # httpsRedirect: true

    # - hosts:
    #     - "*.admin.kaonmir.xyz"
    #   port:
    #     name: https
    #     number: 443
    #     protocol: HTTP
    #   tls:
    #     mode: PASSTHROUGH
